#   PROCESS THAT IS TIME SENSITIVE, UNMONITORED, OR
#   PERSISTENCE CRITICAL. DO NOT USE THIS SOFTWARE WITHOUT
#   ANOTHER METHOD iOR RUNNING THE PROCESS YOU WISH TO
#   AUTOMATE WITH Net::FullAuto. DO NOT USE IN/FOR A PROCESS
#   WHERE FAILURE OF "ANY KIND" IS UNACCEPTABLE.
#
################################################################


2010-09-29  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 0.48 released.

        * Replaced IO::CaptureOutput with Capture::Tiny
          (works better).


2010-09-29  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 0.47 released.

        * Replaced Mail::Internet and Mail::Sender with
          Email::Sender and MIME::Entity modules. Send_email
          functionality was modified to use these modules
          instead. The reason for the replacement, was
          Mail::Sender paused to ask for user input during
          cpan builds, and this might have been causing
          the automated test builds to fail.

        * Modified Makefile.PL to install new email dependencies.

        * Modified Makefile.PL to ask users installing Cygwin
          what editor they would prefer for installation and/or
          default.


2010-09-26  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 0.46 released.

        * Changed Makefile.PL to fix Cygwin install


2010-09-17  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 0.45 released.

        * Moved "requires DB_File" to bottom of requires list
          in continuing effort to clean up CPAN testers
          reports


2010-09-14  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 0.44 released.

        * Changed fullauto -V to work better with Cygwin


2010-09-11  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 0.43 released.

        * Forgot to include fullauto.pl changes in Version 0.42

