@@ -34,7 +34,7 @@ package Net::FullAuto;
 ################################################################
 
 
-our $VERSION='0.48';
+our $VERSION='0.49';
 
 
 use 5.005;
