@@ -25,6 +25,16 @@
 ################################################################
 
 
+2010-10-04  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>
+
+        * Version 0.49 released.
+
+        * fa_conf now stores editor setting
+
+        * Makefile.PL modified to assist user in selecting
+          editor
+
+
 2010-09-29  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>
 
         * Version 0.48 released.
